--- a/_config.yml
+++ b/_config.yml
@@ -6,43 +6,44 @@ theme: jekyll-theme-chirpy
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: en
+lang: pt-BR
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: America/Sao_Paulo
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Sergio Carvalho Queiroz # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Microsoft Fabric Analytics Engineer Associate | Especialista em Lead Data Officer # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Microsoft Fabric Analytics Engineer Associate | Especialista em Lead Data Officer.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://github.com/queirozsc"
 
 github:
-  username: github_username # change to your GitHub username
+  username: queirozsc # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: queirozsc # change to your Twitter username
+  card: summary
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Sergio Carvalho Queiroz
+  email: queirozsc@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://twitter.com/queirozsc # change to your Twitter homepage
+    - https://github.com/queirozsc # change to your GitHub homepage
     # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.facebook.com/queirozsc
+    - https://www.linkedin.com/in/queirozsc
 
 # Site Verification Settings
 webmaster_verifications:
